@@ -1,111 +1,169 @@
-# Chapter 20 — GraalVM and Native Image
+# Chapter 20 — Ahead-of-Time: Project Leyden and GraalVM Native Image
 
-[← Previous: JIT Deep Dive](19-jit-deep-dive.md) · [Next: Monitoring →](21-monitoring.md)
+## The Startup and Warmup Problem
 
----
+The JIT we just studied is wonderful for long-running servers: it watches the program, bets on what it sees, and ends up with machine code tuned to the real workload. But all of that happens *at runtime*, and it has a price at the start of every run:
 
-## What Is GraalVM?
+1. **Startup**: before `main` does anything useful, the JVM loads, verifies, and links hundreds or thousands of classes, runs static initializers, and (for frameworks like Spring) scans the classpath, reads annotations, and builds proxies.
+2. **Warmup**: once the app is up, it runs in the interpreter and C1 code until the JIT has gathered profiles and C2 has compiled the hot paths. For a big service that can take many seconds or minutes, during which latency is worse and CPU use is higher.
 
-GraalVM is an ecosystem with three main components:
+For a server that runs for weeks, nobody cares. For a CLI tool, a serverless function, a test suite, or a container that autoscales under load, it matters a lot. And the frustrating part is that **the JVM does exactly the same work, with nearly the same result, every single time the app starts**.
 
-1. **Graal JIT Compiler** — A JIT compiler written in Java (replacing HotSpot's C2)
-2. **Truffle Framework** — A toolkit for implementing languages on the JVM
-3. **Native Image** — An AOT compiler that creates standalone native executables
+The answer is to do some of that work *ahead of time*. There are two very different ways of doing that on the JVM today, and this chapter covers both.
 
-Let's explore each.
+## A Spectrum, Not a Switch
 
-## The Graal JIT Compiler
+"Ahead-of-time" isn't one thing. Think of it as a spectrum: the more you decide before the program runs, the faster it starts, and the less dynamic it is allowed to be.
 
-HotSpot's C2 compiler is written in C++ and has accumulated decades of complexity. The Graal JIT is a modern replacement written in Java. Why does this matter?
-
-- **Easier to maintain and extend** — Java is higher-level than C++
-- **Better optimizations** in some cases — particularly **partial escape analysis**
-- **Foundation for polyglot** — the same compiler infrastructure serves all Truffle languages
-
-### Partial Escape Analysis
-
-Standard escape analysis (Chapter 19) is all-or-nothing: either an object escapes or it doesn't. Graal's **partial escape analysis** handles the case where an object escapes on *some* paths but not others:
-
-```java
-Point p = new Point(x, y);
-if (condition) {
-    return p;              // Escapes on this path
-} else {
-    return p.x + p.y;     // Doesn't escape on this path
-}
+```text
+    ┌────────────────────────────────────────┐
+    │ Plain JVM                              │
+    │ everything happens at runtime          │
+    └────────────────────────────────────────┘
+                        │
+                        │
+┌─ Project Leyden ──────┼─────────────────────────┐
+│                       ▼     still a full JVM    │
+│   ┌────────────────────────────────────────┐    │
+│   │ CDS / AOT cache                        │    │
+│   │ pre-parsed, pre-linked classes         │    │
+│   └────────────────────────────────────────┘    │
+│                       │                         │
+│                       ▼                         │
+│   ┌────────────────────────────────────────┐    │
+│   │ AOT cache + profiles                   │    │
+│   │ JIT starts informed                    │    │
+│   └────────────────────────────────────────┘    │
+│                       │                         │
+│                       ▼                         │
+│   ┌────────────────────────────────────────┐    │
+│   │ AOT cache + compiled code              │    │
+│   │ JIT starts with code                   │    │
+│   └────────────────────────────────────────┘    │
+│                       │                         │
+└───────────────────────┼─────────────────────────┘
+                        ▼
+    ┌────────────────────────────────────────┐
+    │ Native Image                           │
+    │ closed world, no JIT, no class loading │
+    └────────────────────────────────────────┘
 ```
 
-Standard escape analysis: Point always allocated (because it *might* escape).
-Partial escape analysis: Point materialized only on the `return p` path. On the `else` path, it's replaced by scalars.
+Going down the chain, startup and warmup get faster. Everything inside the Leyden box keeps the **full dynamism of Java**: class loading, reflection, bytecode generation, and a JIT that can re-optimize. The last step, Native Image, gives some of that up in exchange for the fastest startup and the smallest footprint.
 
-This is particularly beneficial for Scala's pattern of creating many small objects that are conditionally used.
+## Project Leyden: The AOT Cache
 
-### Using the Graal JIT
+[Project Leyden](https://openjdk.org/projects/leyden/) is the OpenJDK project for improving startup, warmup, and footprint. Its approach is simple to state: run the application once as a **training run**, record what the JVM did, save it in an **AOT cache**, and reuse that cache in production.
+
+### Where It Comes From: Class Data Sharing
+
+Leyden builds on a feature that has been around for years: **Class Data Sharing (CDS)**. CDS stores parsed class metadata in an archive file that the JVM memory-maps at startup instead of parsing `.class` files again. Since JDK 12 the JDK ships with a default CDS archive for its own classes (that's the `sharing` in `java -version`), and AppCDS extends it to your application classes.
+
+The AOT cache generalizes CDS: same idea, more things stored, and a simpler workflow.
+
+### What Goes in the Cache, Release by Release
+
+<p class="timeline-title">What the AOT cache stores</p>
+<ol class="timeline">
+<li><span class="when">JDK 24</span>Loaded and linked classes (JEP 483)</li>
+<li><span class="when">JDK 25</span>One-step training (JEP 514)<br/>Method profiles (JEP 515)</li>
+<li><span class="when">JDK 26</span>Cached objects work with any GC, incl. ZGC (JEP 516)</li>
+<li class="future"><span class="when">JDK 28 (proposed)</span>Compiled native code (JEP 544)</li>
+</ol>
+
+- **Classes** <span class="since">Java 24</span> ([JEP 483](https://openjdk.org/jeps/483)): classes are stored already loaded and linked, so the JVM skips reading, parsing, verifying, and linking them. The JEP measures a 42% startup improvement for Spring PetClinic (4.486 s on JDK 23 → 2.604 s on JDK 24 with an AOT cache), and, by coincidence, 42% on a tiny Stream program too.
+- **Simpler workflow** <span class="since">Java 25</span> ([JEP 514](https://openjdk.org/jeps/514)): one training command instead of two.
+- **Method profiles** <span class="since">Java 25</span> ([JEP 515](https://openjdk.org/jeps/515)): the JIT's profiles from training are stored too, so C2 can compile hot methods right away in production (see [Chapter 19](19-jit-deep-dive.md#aot-profiles-and-aot-code-warming-up-the-jit-in-advance)). The JEP's example program gets 19% faster.
+- **Any GC** <span class="since">Java 26</span> ([JEP 516](https://openjdk.org/jeps/516)): objects in the cache are stored in a GC-neutral format, so the cache now works with ZGC as well as the other collectors.
+- **Native code** (proposed for Java 28, [JEP 544](https://openjdk.org/jeps/544)): code compiled by C1 and C2 during training is stored in the cache and loaded instantly. The JEP reports that the AOT cache alone cuts startup by 50–70% on framework benchmarks, and 65–80% with AOT code; for warmup, `javac` reaches about 75% better first-iteration performance with cache plus code.
+
+### Using It
+
+On JDK 25 and later, it's two commands:
 
 ```bash
-# Use Graal as the JIT compiler (within a standard JDK that supports JVMCI)
-java -XX:+UseJVMCICompiler -jar myapp.jar
+# 1. Training run: a representative workload; the cache is written on exit
+java -XX:AOTCacheOutput=app.aot -cp app.jar com.example.App
+
+# 2. Production: start with the cache
+java -XX:AOTCache=app.aot -cp app.jar com.example.App
 ```
 
-## Truffle: The Language Framework
+On JDK 24 the same thing took three steps (record a configuration, create the cache, run):
 
-Truffle lets you implement a programming language as an AST (Abstract Syntax Tree) interpreter, and Graal automatically JIT-compiles it to native code through **partial evaluation**:
-
-```
-Your Truffle interpreter:  AST → Walk nodes → Execute
-Graal:                     Observes the interpreter running
-                           Partially evaluates the interpreter + user program
-                           Compiles to native code
-
-Result: A user program in your language runs at near-native speed
+```bash
+java -XX:AOTMode=record -XX:AOTConfiguration=app.aotconf \
+     -cp app.jar com.example.App
+java -XX:AOTMode=create -XX:AOTConfiguration=app.aotconf \
+     -XX:AOTCache=app.aot -cp app.jar
+java -XX:AOTCache=app.aot -cp app.jar com.example.App
 ```
 
-Languages built on Truffle:
-- **GraalJS** — JavaScript/Node.js
-- **TruffleRuby** — Ruby
-- **GraalPython** — Python
-- **GraalWasm** — WebAssembly
-- **Sulong** — LLVM bitcode (C/C++/Rust)
+There's no new tool, no new language rules, and no code changes. If the cache can't be used (wrong JDK, different classpath…), the JVM simply ignores it and starts normally.
 
-These languages can call each other with zero overhead through Truffle's polyglot API:
+> [!TIP]
+> In CI or in a container build, you usually want to *know* the cache is used rather than silently lose the speed-up. Add `-XX:AOTMode=required` (JDK 27; on JDK 24–26 the same mode is spelled `-XX:AOTMode=on`) to make the JVM exit with an error if the cache is unusable.
 
-```java
-// Java calling JavaScript calling Python
-Context context = Context.create();
-context.eval("js", "console.log('Hello from JS!')");
-context.eval("python", "print('Hello from Python!')");
-```
+A natural place for the training run is your container build: run the app against a smoke-test workload in one build stage, and ship the resulting `app.aot` next to the JAR.
 
-## Native Image: Ahead-of-Time Compilation
+### Training Run Caveats
 
-**Native Image** is GraalVM's AOT compiler. It takes your entire application (bytecode + all dependencies) and compiles it to a standalone native executable — no JVM needed at runtime.
+The cache is only as good as the training run, and it's only valid for a matching environment:
+
+> [!WARNING]
+> - **Same JDK release, same OS, same CPU architecture** for training and production.
+> - **Same classpath**: production may append extra entries at the end, but otherwise it must be identical, and it must contain **only JAR files** (no directories). Module options (`-p`, `--add-modules`, …) must match too.
+> - Only classes loaded by the **JDK's built-in class loaders** are cached; classes from custom class loaders are loaded the normal way.
+> - For AOT **code** (JEP 544), training and production must also use the same GC and CPU features.
+> - A training run that doesn't exercise the real code paths (for example, one that starts the app and exits) caches classes but produces poor profiles. Make it look like production traffic.
+
+Nothing breaks if production diverges from training; the JVM just loads, profiles, and compiles the missing parts the usual way. You lose some of the benefit, not correctness.
+
+## GraalVM Native Image: The Closed World
+
+**Native Image** takes the opposite approach. Instead of making the JVM start faster, it removes the JVM: it compiles your application, its libraries, and the parts of the JDK it uses into a **standalone native executable**. At runtime there is no bytecode, no class loading, and no JIT. There's a small runtime (called Substrate VM) that provides the GC, threads, and exception handling.
 
 ### How It Works
 
-```
-Your Application (.jar)
-     +
-All Dependencies
-     +
-JDK Libraries
-     │
-     ▼
-┌──────────────────────────────────┐
-│      NATIVE IMAGE BUILD          │
-│                                  │
-│  1. Points-to analysis           │  ← Find ALL reachable code
-│  2. Class initialization         │  ← Run static initializers at build time
-│  3. Heap snapshot (image heap)   │  ← Serialize initialized data into binary
-│  4. Ahead-of-time compilation    │  ← Compile to native machine code
-│                                  │
-└──────────────┬───────────────────┘
-               │
-               ▼
-    myapp (native binary, ~30-100 MB)
-    └── Runs directly on OS, no JVM
+```text
+    ┌────────────────────────────────────────┐
+    │ Your classes + dependencies + JDK      │
+    └────────────────────────────────────────┘
+                        │
+┌─ native-image build ──┼─────────────────────────┐
+│                       ▼     takes minutes       │
+│   ┌────────────────────────────────────────┐    │
+│   │ 1. Points-to analysis                  │    │
+│   │    find all reachable code             │    │
+│   └────────────────────────────────────────┘    │
+│                       │                         │
+│                       ▼                         │
+│   ┌────────────────────────────────────────┐    │
+│   │ 2. Build-time initialization           │    │
+│   │    run safe static initializers        │    │
+│   └────────────────────────────────────────┘    │
+│                       │                         │
+│                       ▼                         │
+│   ┌────────────────────────────────────────┐    │
+│   │ 3. Image heap snapshot                 │    │
+│   │    initialized objects saved into      │    │
+│   │    the binary                          │    │
+│   └────────────────────────────────────────┘    │
+│                       │                         │
+│                       ▼                         │
+│   ┌────────────────────────────────────────┐    │
+│   │ 4. AOT compilation                     │    │
+│   │    reachable methods to machine code   │    │
+│   └───────────────────┬────────────────────┘    │
+└───────────────────────┼─────────────────────────┘
+                        ▼
+    ┌────────────────────────────────────────┐
+    │ ./myapp                                │
+    │ native executable, no JVM needed       │
+    └────────────────────────────────────────┘
 ```
 
-### Building a Native Image
+The key word is **reachable**. The analysis starts from `main` and follows every call, field access, and allocation it can see. Anything it can't reach is not in the binary. That's what makes the result small and fast, and it's also the source of every Native Image headache.
 
 ```bash
 # From a JAR
@@ -115,137 +173,189 @@ native-image -jar myapp.jar -o myapp
 native-image -cp myapp.jar com.example.Main -o myapp
 
 # Run it
-./myapp   # Starts in milliseconds!
+./myapp   # starts in milliseconds
 ```
 
-### Scala with Native Image
-
-Using Scala CLI:
-```bash
-scala-cli package --native-image MyApp.scala -o myapp
-```
-
-Using sbt with `sbt-native-packager`:
-```scala
-// build.sbt
-enablePlugins(NativeImagePlugin)
-nativeImageOptions ++= Seq(
-  "--no-fallback",
-  "--initialize-at-build-time"
-)
-```
-
-### Trade-offs
-
-| Aspect               | JIT (HotSpot/Graal)        | AOT (Native Image)                |
-| -------------------- | -------------------------- | --------------------------------- |
-| **Startup**          | 1-5 seconds                | 10-50 milliseconds                |
-| **Peak throughput**  | Excellent (profile-guided) | Good (no runtime profiling)       |
-| **Memory footprint** | Higher (JIT, profiling)    | Lower (no JIT, no class metadata) |
-| **Build time**       | Fast (seconds)             | Slow (minutes)                    |
-| **Compatibility**    | Full                       | Limited (closed-world)            |
-| **Distribution**     | Requires JDK               | Single binary                     |
+With Maven or Gradle, the GraalVM **Native Build Tools** plugins run the build for you.
 
 ### The Closed-World Assumption
 
-Native Image must see **all reachable code at build time**. This means:
+Native Image must see **all code that can ever run, at build time**. Whatever the analysis can't see statically needs to be declared:
 
-**Not supported without configuration:**
-- **Reflection** — `Class.forName()`, `method.invoke()` need explicit config
-- **Dynamic class loading** — No `new ClassLoader().loadClass()`
-- **Runtime bytecode generation** — No ByteBuddy, CGLIB
-- **JNI** — Needs configuration
-- **Serialization** — Needs configuration
+- **Reflection**: `Class.forName(name)`, `method.invoke()` with names computed at runtime
+- **Resources** loaded with `getResource`
+- **JNI**, **dynamic proxies**, and **serialization**
+- **Dynamic class loading and runtime bytecode generation** (ByteBuddy, CGLIB, runtime-generated proxies) are not supported at all; frameworks that need them generate the code at build time instead
 
-You provide configuration via JSON files:
+These declarations are called **reachability metadata**. Current GraalVM versions read a single `reachability-metadata.json` file, placed on the classpath under `META-INF/native-image/<groupId>/<artifactId>/`:
 
 ```json
-// reflect-config.json
-[
-  {
-    "name": "com.example.MyClass",
-    "allDeclaredMethods": true,
-    "allDeclaredFields": true,
-    "allDeclaredConstructors": true
-  }
-]
+{
+  "reflection": [
+    {
+      "type": "com.example.MyClass",
+      "allDeclaredConstructors": true,
+      "methods": [
+        { "name": "process", "parameterTypes": ["java.lang.String"] }
+      ]
+    }
+  ]
+}
 ```
 
-Or use the **tracing agent** to auto-discover:
+You rarely write this by hand:
+
+- Many libraries ship their own metadata, and the **GraalVM Reachability Metadata Repository** provides it for popular libraries that don't (the Native Build Tools plugins pull it in automatically).
+- The **tracing agent** records what your app does on a regular JVM and writes the metadata for you:
 
 ```bash
-# Run your app with the agent to record what's used
-java -agentlib:native-image-agent=config-output-dir=./config -jar myapp.jar
-
-# Use the recorded config for native-image
-native-image -H:ConfigurationFileDirectories=./config -jar myapp.jar
+java -agentlib:native-image-agent=config-output-dir=src/main/resources/META-INF/native-image/com.example/myapp \
+     -jar myapp.jar
+# ... exercise the application, then stop it ...
 ```
+
+The agent only sees code paths you actually exercise, so run your tests (or a realistic scenario) with it.
 
 ### Build-Time Initialization
 
-Native Image can run class initializers (static blocks, Scala `object` bodies) at **build time** instead of runtime. The initialized state is serialized into the binary:
+Native Image can run class initializers (static blocks, Scala `object` bodies) at **build time** and save the resulting objects into the binary's *image heap*. At runtime they are simply there, already initialized.
+
+By default, Native Image initializes most JDK classes at build time, and application classes at build time only if it can prove it's safe; everything else is initialized at run time, like on the JVM. You can opt a class in explicitly:
 
 ```bash
 native-image --initialize-at-build-time=com.example.Config -jar myapp.jar
 ```
 
-This means `Config.loadDefaults()` runs during the build, and the result is baked into the binary. At runtime, it's instant.
+> [!CAUTION]
+> Build-time initialization freezes whatever the initializer computed. If it reads environment variables, the current time, a random seed, or opens a connection, those values (or broken handles) end up baked into the binary and shared by every run.
 
-> **Caution**: Build-time initialization can cause issues if the initializer reads environment variables, connects to databases, or uses random numbers — those values get frozen into the binary.
+### Profile-Guided Optimization
 
-### Profile-Guided Optimization (PGO)
-
-Native Image can use profiling data to optimize like a JIT — collect profiles at runtime, then rebuild:
+Without a JIT, Native Image compiles without knowing which branches are hot. **PGO** (available in Oracle GraalVM) closes part of that gap by compiling twice:
 
 ```bash
-# Step 1: Build an instrumented binary
+# 1. Build an instrumented binary
 native-image --pgo-instrument -jar myapp.jar -o myapp-inst
 
-# Step 2: Run it under realistic load (generates profiles)
+# 2. Run it under realistic load; it writes default.iprof on exit
 ./myapp-inst
-# ... exercise the application ...
 
-# Step 3: Rebuild with profiles
-native-image --pgo=default.iprof -jar myapp.jar -o myapp-optimized
+# 3. Rebuild using the profile
+native-image --pgo=default.iprof -jar myapp.jar -o myapp
 ```
 
-This narrows the throughput gap between JIT and AOT.
-
-## Scala Frameworks and Native Image
-
-| Framework          | Native Image Support                             |
-| ------------------ | ------------------------------------------------ |
-| **http4s**         | Good (with Ember server)                         |
-| **ZIO**            | Good (zio-http)                                  |
-| **Scala CLI**      | Excellent (built-in support)                     |
-| **Spark**          | Not supported (heavy reflection/dynamic loading) |
-| **Play Framework** | Limited                                          |
-| **Akka/Pekko**     | Partial (serialization issues)                   |
-
-## When to Use Native Image
+### When to Use Native Image
 
 **Good fit:**
-- CLI tools (instant startup matters)
-- Serverless functions (AWS Lambda, Google Cloud Functions)
-- Microservices that scale to zero
-- Container-optimized deployments (small image size)
+- CLI tools, where every millisecond of startup is visible
+- Serverless functions and services that scale to zero
+- Memory-constrained deployments with many small instances
+- Distributing a single binary without asking users to install Java
 
-**Bad fit:**
-- Long-running servers where peak throughput matters most
-- Applications that rely heavily on reflection or dynamic loading
-- Rapid development (slow build cycle)
+**Poor fit:**
+- Long-running services where peak throughput matters most (the JIT, with real profiles, usually wins)
+- Code that relies on runtime bytecode generation or heavy, dynamic reflection
+- Teams that can't afford minutes-long builds or testing a separate "native" variant of the app
+
+On the framework side, **Quarkus**, **Micronaut**, **Helidon**, and **Spring Boot** (through Spring AOT) all support Native Image; they move reflection and proxy generation to build time so that the closed world is easy to satisfy.
+
+## The Graal JIT Compiler and Truffle
+
+GraalVM is more than Native Image. Its core is **Graal**, an optimizing compiler written in Java. It's the compiler Native Image uses to produce machine code, and in GraalVM distributions it also replaces C2 as the JIT (plugged into HotSpot through the JVMCI interface).
+
+Its best-known advantage is **partial escape analysis**. C2's escape analysis ([Chapter 19](19-jit-deep-dive.md#escape-analysis)) is all-or-nothing: if an object escapes on *any* path, it's allocated. Graal allocates it only on the paths where it actually escapes:
+
+```java
+Point p = new Point(x, y);
+if (rare) {
+    cache.put(key, p);     // escapes here: Graal allocates p only on this path
+}
+return p.x() + p.y();      // on the common path, p stays in registers
+```
+
+This is particularly helpful for Scala code, which creates many short-lived objects (tuples, closures, `Option`s) that escape only on uncommon paths.
+
+**Truffle** is a framework for writing language interpreters that Graal turns into optimized machine code (through *partial evaluation* of the interpreter together with the user's program). The GraalVM languages are built with it: **GraalJS** (JavaScript), **GraalPy** (Python), **TruffleRuby**, and **GraalWasm** (WebAssembly). You embed them from Java with the polyglot API, and they can pass objects to each other:
+
+```java
+import org.graalvm.polyglot.Context;
+
+try (var context = Context.create("js", "python")) {
+    context.eval("js", "console.log('Hello from JS!')");
+    context.eval("python", "print('Hello from Python!')");
+}
+```
+
+These languages are ordinary Maven dependencies and also run on a regular JDK; on GraalVM they get Graal's JIT for full speed.
+
+## GraalVM in 2025 and After
+
+In September 2025, alongside GraalVM 25, Oracle announced it was **"detaching GraalVM from the Java ecosystem train"**:
+
+- **Oracle GraalVM for JDK 24 was the last release** licensed and supported as part of Oracle's Java SE products.
+- The GraalVM team **refocused on the non-Java Graal languages**, such as GraalPy and GraalJS.
+- The goals Native Image was serving for Java (startup, warmup, footprint) are being pursued **inside OpenJDK through Project Leyden**, as a standard part of the platform.
+
+This is not the end of Native Image as a technology. GraalVM 25 shipped (followed by updates such as 25.0.2 in January 2026, on the quarterly critical-patch cadence), and the frameworks above continue to support it. What changed is the direction: for most Java and Scala teams that want faster startup, **Leyden is now the mainstream, zero-code-change path**, and Native Image is the specialized tool for when you need the smallest, fastest-starting, closed-world binary.
+
+## Leyden vs Native Image vs Plain JIT
+
+| Aspect                   | Plain JIT              | Leyden AOT cache              | Native Image                 |
+| ------------------------ | ---------------------- | ----------------------------- | ---------------------------- |
+| Startup                  | Slowest                | Much faster                   | Fastest (milliseconds)       |
+| Warmup                   | Slow (profiles first)  | Faster (cached profiles, code soon) | None, but code is fixed at build |
+| Peak performance         | Excellent              | Excellent (same JIT)          | Good; PGO helps              |
+| Memory footprint         | Highest                | Similar to plain JVM          | Lowest                       |
+| Java dynamism            | Full                   | Full                          | Closed world, needs metadata |
+| Build step               | None                   | One training run              | Minutes-long native build    |
+| Output                   | JAR + JDK              | JAR + JDK + `app.aot`         | Single native executable     |
+| Part of OpenJDK          | Yes                    | Yes (JDK 24+)                 | No (GraalVM)                 |
+
+A reasonable default in 2026: start with the plain JVM, add an AOT cache when startup or warmup matters (it's nearly free), and reach for Native Image when you need what only a closed world gives you.
+
+## The Scala Angle
+
+> **Meanwhile, in Scala land**
+>
+> - **Leyden just works.** The AOT cache knows nothing about the source language: a Scala app packaged as a JAR (for example with `sbt assembly`) can be trained and started with `-XX:AOTCacheOutput` / `-XX:AOTCache` exactly like a Java app. Remember the "JARs only" rule: running from `target/scala-3.x/classes` directories won't be cached.
+> - **Native Image works with Scala** too. Most Scala code is quite friendly to a closed world: type classes and derivation (circe, zio-json…) are resolved at compile time. Trouble comes from Java libraries using reflection, from structural types (`reflectiveSelectable`), and from runtime class loading. The tracing agent covers most of it. For sbt, `sbt-native-packager` has a `GraalVMNativeImagePlugin`:
+>
+>   ```scala
+>   // build.sbt
+>   enablePlugins(GraalVMNativeImagePlugin)
+>   graalVMNativeImageOptions ++= Seq("--no-fallback")
+>   ```
+>
+> - **Scala CLI** can build a native image in one command:
+>
+>   ```bash
+>   scala-cli --power package MyApp.scala -o myapp --native-image
+>   ```
+>
+> - **Scala Native is a different project.** It compiles Scala to native code through LLVM, with its own runtime and GC, and doesn't use the JVM or GraalVM at all (`scala-cli --power package --native …`). It's great for small tools, but you use Scala Native versions of libraries instead of arbitrary JVM JARs.
+
+Framework support for Native Image varies. As a rough guide:
+
+| Scala stack        | Native Image                                      |
+| ------------------ | ------------------------------------------------- |
+| http4s (Ember)     | Works well                                        |
+| ZIO / ZIO HTTP     | Works well                                        |
+| Scala CLI          | Is itself distributed as a native image           |
+| Pekko / Akka       | Partial (reflection-based serialization needs config) |
+| Play Framework     | Limited                                           |
+| Spark              | Not realistic (dynamic class loading and codegen) |
+
+<div class="takeaways">
 
 ## Key Takeaways
 
-- **Graal JIT**: Modern JIT compiler in Java, with **partial escape analysis** for better optimization
-- **Truffle**: Framework for building high-performance language runtimes on the JVM
-- **Native Image**: AOT compilation to standalone binaries — millisecond startup, smaller footprint
-- Native Image requires the **closed-world assumption** — all code visible at build time
-- **Reflection** and dynamic features need explicit configuration
-- Use the **tracing agent** to auto-discover reflection/JNI/resource usage
-- **PGO** bridges the throughput gap between JIT and AOT
-- Best for **CLI tools, serverless, and microservices**; less suitable for throughput-heavy long-running servers
+- The JVM repeats the same startup and warmup work on every run; **ahead-of-time** techniques do it once
+- **Project Leyden** stores that work in an **AOT cache** from a **training run**: classes (24), profiles (25), any GC (26), and compiled code (proposed for 28)
+- Two commands on JDK 25+: `-XX:AOTCacheOutput=app.aot` to train, `-XX:AOTCache=app.aot` to run; same JDK, OS, architecture, and classpath (JARs only) required
+- Leyden keeps **full Java dynamism** and the JIT, so peak performance is unchanged
+- **GraalVM Native Image** compiles a **closed world** into a standalone executable: fastest startup, smallest footprint, but reflection and resources need **reachability metadata** and the build takes minutes
+- **Graal** is also a JIT (with partial escape analysis) and powers **Truffle** languages like GraalPy and GraalJS
+- Since 2025, Oracle has moved GraalVM's focus to non-Java languages; **Leyden is the mainstream path** for faster Java startup, Native Image remains the specialist tool
+- Scala apps benefit from both; **Scala Native** is a separate, LLVM-based project
 
----
-
-[← Previous: JIT Deep Dive](19-jit-deep-dive.md) · [Next: Monitoring →](21-monitoring.md)
+</div>
