@@ -1,32 +1,42 @@
 # Chapter 24 — JNI, Panama, and Native Interop
 
-[← Previous: Module System](23-module-system.md) · [Next: Language Ecosystem →](25-language-ecosystem.md)
-
----
-
 ## Why Call Native Code?
 
 Sometimes you need to step outside the JVM:
-- **System calls**: Accessing OS-specific features (memory-mapped files, hardware sensors)
-- **Performance-critical libraries**: OpenSSL, BLAS/LAPACK, codec libraries
-- **Existing C/C++ libraries**: Using code that already exists in native form
+- **System calls**: OS-specific features (memory-mapped files, sockets options, hardware sensors)
+- **Performance-critical libraries**: OpenSSL, BLAS/LAPACK, compression and codec libraries
+- **Existing C/C++ libraries**: code that already exists in native form (SQLite, RocksDB, TensorFlow…)
 - **Hardware access**: GPU computation (CUDA), SIMD instructions
 
-The JVM has historically provided one way to do this: **JNI**. It works, but it's painful. **Project Panama** is the modern replacement.
+For 25 years the JVM offered one way to do this: **JNI**. It works, but it's painful. **Project Panama** delivered the modern replacement, the **Foreign Function & Memory (FFM) API**, final since Java 22.
+
+```text
+JNI
+┌──────────────┐   ┌──────────────┐   ┌──────────────┐   ┌───────────┐
+│ Java: native │──▶│ Generated C  │──▶│ Hand-written │──▶│ C library │
+│ method       │   │ header       │   │ C glue       │   │           │
+└──────────────┘   └──────────────┘   └──────────────┘   └───────────┘
+
+FFM API
+┌──────────────┐                                         ┌───────────┐
+│ Java:        │────────────────────────────────────────▶│ C library │
+│ MethodHandle │                                         │           │
+└──────────────┘                                         └───────────┘
+```
 
 ## JNI: The Old Way
 
-**Java Native Interface (JNI)** has been part of the JVM since Java 1.1. Here's what it takes to call a simple C function:
+The **Java Native Interface (JNI)** has been part of the platform since Java 1.1. Here's what it takes to call a simple C function.
 
 ### Step 1: Declare the Native Method (Java)
 
 ```java
 public class NativeDemo {
-    // Mark the method as native — no body, implemented in C
+    // Mark the method as native: no body, implemented in C
     public static native int add(int a, int b);
 
     static {
-        System.loadLibrary("nativedemo");  // Load libnativedemo.so / nativedemo.dll
+        System.loadLibrary("nativedemo");  // Loads libnativedemo.so / .dylib / nativedemo.dll
     }
 
     public static void main(String[] args) {
@@ -60,7 +70,7 @@ JNIEXPORT jint JNICALL Java_NativeDemo_add(JNIEnv *env, jclass cls, jint a, jint
 
 ```bash
 # Linux
-gcc -shared -o libnativedemo.so -I$JAVA_HOME/include -I$JAVA_HOME/include/linux NativeDemo.c
+gcc -shared -fPIC -o libnativedemo.so -I$JAVA_HOME/include -I$JAVA_HOME/include/linux NativeDemo.c
 
 # macOS
 gcc -shared -o libnativedemo.dylib -I$JAVA_HOME/include -I$JAVA_HOME/include/darwin NativeDemo.c
@@ -69,24 +79,26 @@ gcc -shared -o libnativedemo.dylib -I$JAVA_HOME/include -I$JAVA_HOME/include/dar
 ### Step 5: Run
 
 ```bash
-java -Djava.library.path=. NativeDemo
+java --enable-native-access=ALL-UNNAMED -Djava.library.path=. NativeDemo
 # Output: 7
 ```
 
+Without `--enable-native-access`, JDK 24 and later still run the program but print a warning first (see [below](#native-access-is-now-restricted)).
+
 ### Why JNI Is Painful
 
-- **Boilerplate**: Header generation, manual type mapping, error-prone parameter passing
-- **Unsafe**: Easy to crash the JVM with a wrong pointer
-- **Slow**: Crossing the JNI boundary has overhead (~50–100 ns per call)
-- **Platform-specific**: Must compile native code for each OS/architecture
-- **GC interaction**: Must manually pin objects (`GetPrimitiveArrayCritical`) to prevent the GC from moving them while C code holds a pointer
-- **Debugging**: If native code crashes, you get a core dump, not a nice stack trace
+- **Boilerplate**: header generation, manual type mapping, error-prone parameter passing
+- **Unsafe**: a wrong pointer crashes the whole JVM
+- **Call overhead**: each transition goes through JNI wrappers, and the JIT can't see or optimize across the boundary
+- **Platform-specific**: the C code must be compiled for each OS/architecture you ship to
+- **GC interaction**: you must pin arrays (`GetPrimitiveArrayCritical`) or copy them so the GC doesn't move them while C code holds a pointer
+- **Debugging**: when native code crashes, you get an `hs_err` file and a core dump, not a nice stack trace
 
-## Project Panama: The Modern Way
+## The FFM API: The Modern Way <span class="since">Java 22</span>
 
-**Project Panama** (Foreign Function & Memory API, finalized in Java 22) provides safe, efficient native interop without JNI.
+The **Foreign Function & Memory API** (package `java.lang.foreign`, JEP 454) lets you call native functions and manage native memory from pure Java. No C glue, no header generation.
 
-### Calling a C Function with Panama
+### Calling a C Function
 
 Let's call the standard C `strlen` function:
 
@@ -94,117 +106,246 @@ Let's call the standard C `strlen` function:
 import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
 
-public class PanamaDemo {
+public class FfmDemo {
     public static void main(String[] args) throws Throwable {
-        // Get a handle to the C standard library
+        // 1. The linker knows the platform's C calling convention
         Linker linker = Linker.nativeLinker();
-        SymbolLookup stdlib = linker.defaultLookup();
+        SymbolLookup stdlib = linker.defaultLookup();   // the C standard library
 
-        // Look up strlen
+        // 2. Describe the C signature: size_t strlen(const char *s)
         MethodHandle strlen = linker.downcallHandle(
             stdlib.find("strlen").orElseThrow(),
-            FunctionDescriptor.of(
-                ValueLayout.JAVA_LONG,              // return type: size_t (long)
-                ValueLayout.ADDRESS                  // parameter: const char*
-            )
+            FunctionDescriptor.of(ValueLayout.JAVA_LONG,   // return: size_t
+                                  ValueLayout.ADDRESS)     // param:  const char*
         );
 
-        // Allocate a C string
+        // 3. Allocate a C string in an arena and call the function
         try (Arena arena = Arena.ofConfined()) {
             MemorySegment cString = arena.allocateFrom("Hello, Panama!");
-            long length = (long) strlen.invoke(cString);
+            long length = (long) strlen.invokeExact(cString);
             System.out.println("Length: " + length);  // 14
-        }  // Memory automatically freed when arena closes
+        }  // native memory freed here
     }
 }
 ```
 
+`invokeExact` requires the call site types to match the descriptor exactly: a `MemorySegment` argument and a `long` result (hence the `(long)` cast). It is the fastest way to call a method handle, and the JIT can inline it.
+
+> [!NOTE]
+> `strlen` comes from the default lookup, which covers the C standard library. For your own library, use `SymbolLookup.libraryLookup("libfoo.so", arena)` (or `libraryLookup(Path, arena)`), or `SymbolLookup.loaderLookup()` after `System.loadLibrary`.
+
 ### Key Concepts
 
+```text
+┌────────────────────┐                            ┌────────────────────┐
+│ SymbolLookup       │                            │ Arena              │
+│                    │                            │ (lifetime)         │
+└──────────┬─────────┘                            └──────────┬─────────┘
+           │ find(name)              allocate / allocateFrom │
+           ▼                                                 ▼
+┌────────────────────┐   ┌────────────────────┐   ┌────────────────────┐
+│ MemorySegment      │   │ FunctionDescriptor │   │ MemorySegment      │
+│ (function address) │   │ (C signature       │   │ (native memory)    │
+│                    │   │ as layouts)        │   │                    │
+└──────────┬─────────┘   └──────────┬─────────┘   └──────────┬─────────┘
+           │                        │     passed as argument │
+           ╰────────────────────╮   │   ╭────────────────────╯
+                                ▼   ▼   ▼
+                            ┌──────────────┐
+                            │ MethodHandle │
+                            └──────────────┘
+                                    ▲
+                                    │ downcallHandle(symbol, descriptor)
+                       ┌────────────┴────────────┐
+                       │  Linker.nativeLinker()  │
+                       └─────────────────────────┘
+```
+
 #### Memory Segments
-Type-safe wrappers around native memory pointers:
+
+A `MemorySegment` is a bounded, lifetime-checked view of a block of memory, native or on-heap. Every access is checked against its size and its arena's lifetime, so an out-of-bounds read throws an exception instead of reading garbage:
 
 ```java
 try (Arena arena = Arena.ofConfined()) {
-    // Allocate 100 bytes of native memory
-    MemorySegment segment = arena.allocate(100);
+    MemorySegment segment = arena.allocate(100);   // 100 bytes of native memory
 
-    // Write an int at offset 0
-    segment.set(ValueLayout.JAVA_INT, 0, 42);
+    segment.set(ValueLayout.JAVA_INT, 0, 42);       // write an int at offset 0
+    int value = segment.get(ValueLayout.JAVA_INT, 0); // 42
 
-    // Read it back
-    int value = segment.get(ValueLayout.JAVA_INT, 0);  // 42
+    segment.get(ValueLayout.JAVA_INT, 100);         // IndexOutOfBoundsException
 }
 ```
 
-#### Arenas
-Manage the lifecycle of native memory. When the arena closes, all its allocations are freed:
+Structured data (C structs) is described with layouts such as `MemoryLayout.structLayout(...)`, from which you can derive `VarHandle`s for each field.
 
-| Arena Type           | Behavior                                        |
-| -------------------- | ----------------------------------------------- |
-| `Arena.ofConfined()` | Thread-confined, closed explicitly              |
-| `Arena.ofShared()`   | Can be accessed from multiple threads           |
-| `Arena.ofAuto()`     | Closed by GC (like `ByteBuffer.allocateDirect`) |
-| `Arena.global()`     | Never closed (lives forever)                    |
+#### Arenas
+
+An **arena** controls the lifetime of native memory. When the arena closes, all its allocations are freed at once, and any later access fails safely:
+
+| Arena                | Behavior                                                    |
+| -------------------- | ----------------------------------------------------------- |
+| `Arena.ofConfined()` | One owner thread, closed explicitly (try-with-resources)    |
+| `Arena.ofShared()`   | Usable from many threads, closed explicitly                 |
+| `Arena.ofAuto()`     | Freed by the GC when unreachable (like direct `ByteBuffer`s) |
+| `Arena.global()`     | Never freed                                                 |
 
 #### Function Descriptors
-Describe the signature of a C function in terms of JVM-compatible layouts:
+
+A `FunctionDescriptor` describes a C function's signature in terms of memory layouts:
 
 ```java
 FunctionDescriptor.of(
     ValueLayout.JAVA_INT,       // return type
     ValueLayout.ADDRESS,        // first parameter (pointer)
     ValueLayout.JAVA_LONG       // second parameter (long)
-)
+);
+FunctionDescriptor.ofVoid(ValueLayout.JAVA_INT);   // void f(int)
 ```
 
-### Panama vs JNI
+The API also supports **upcalls** (`linker.upcallStub(...)`): passing a Java method to C as a function pointer, for callbacks like `qsort`'s comparator.
 
-| Aspect                | JNI                                            | Panama                                                |
-| --------------------- | ---------------------------------------------- | ----------------------------------------------------- |
-| **Boilerplate**       | C header generation, manual implementation     | Pure Java, no C code needed                           |
-| **Safety**            | Easy to crash JVM                              | Type-safe memory access, bounds checking              |
-| **Performance**       | ~50-100 ns per call                            | ~5-10 ns per call (approaching JVM method call speed) |
-| **Memory management** | Manual (GetPrimitiveArrayCritical, Release...) | Arena-based, automatic                                |
-| **Compilation**       | Need C compiler per platform                   | Pure Java — no native compilation                     |
-| **Debugging**         | Core dumps                                     | Java exceptions                                       |
+### FFM vs JNI
 
-### Using Panama from Scala
+| Aspect                | JNI                                          | FFM API                                         |
+| --------------------- | -------------------------------------------- | ----------------------------------------------- |
+| **Code to write**     | Java + generated header + C glue             | Pure Java (or generated by jextract)            |
+| **Safety**            | A bad pointer crashes the JVM                | Bounds and lifetime checks on memory segments   |
+| **Performance**       | JIT can't optimize across the boundary       | Downcalls are method handles the JIT can inline |
+| **Memory management** | Manual (`GetPrimitiveArrayCritical`, `Release…`) | Arena-based, deterministic                  |
+| **Build**             | C compiler per platform                      | No native compilation for the glue              |
+| **Native access**     | Restricted since Java 24 (warning)           | Restricted too (same flag)                      |
+
+> [!NOTE]
+> FFM is *safer*, not *safe*: a wrong `FunctionDescriptor` or a C function that writes past a buffer can still crash the process. That's why the methods that bind native code are **restricted** methods.
+
+### Native Access Is Now Restricted
+
+<span class="since">Java 24</span> As part of [integrity by default](23-module-system.md#integrity-by-default), both JNI and FFM require the application to opt in (JEP 472). Loading a library with `System.loadLibrary`, binding a JNI `native` method, or calling a restricted FFM method such as `Linker.downcallHandle` or `SymbolLookup.libraryLookup` prints a one-time warning per module unless native access is enabled:
+
+```bash
+# Classpath code (most Scala apps)
+java --enable-native-access=ALL-UNNAMED -jar myapp.jar
+
+# Named modules
+java --enable-native-access=com.example.db,com.example.crypto -m com.example.app
+```
+
+For an executable JAR, put `Enable-Native-Access: ALL-UNNAMED` in the manifest. `--illegal-native-access=allow|warn|deny` chooses what happens to code that isn't enabled; the default is `warn` (still the case in JDK 27) and a future release will switch to `deny`, which throws `IllegalCallerException`.
+
+### From `sun.misc.Unsafe` to Supported APIs
+
+For years, high-performance libraries (Netty, Kafka clients, Akka, lazy vals in Scala 3) used `sun.misc.Unsafe` to read and write memory without checks. Its memory-access methods are deprecated for removal (JEP 471, Java 23) and print a warning on first use since Java 24 (JEP 498; `--sun-misc-unsafe-memory-access=allow|warn|debug|deny`). There are two supported replacements, both as fast as `Unsafe` once JIT-compiled:
+
+| `Unsafe` use                               | Replacement                                                  |
+| ------------------------------------------ | ------------------------------------------------------------ |
+| CAS / volatile access to a field or array  | `VarHandle` (`MethodHandles.lookup().findVarHandle(...)`)    |
+| `allocateMemory` / `freeMemory`            | `Arena.allocate(...)` → `MemorySegment`                      |
+| `getLong(address)` / `putLong(address, v)` | `MemorySegment.get/set(ValueLayout.JAVA_LONG, offset, v)`    |
+| `copyMemory`                               | `MemorySegment.copy(...)`                                    |
+
+```java
+import java.lang.invoke.*;
+
+class Counter {
+    private volatile long count;
+    private static final VarHandle COUNT;
+    static {
+        try {
+            COUNT = MethodHandles.lookup().findVarHandle(Counter.class, "count", long.class);
+        } catch (ReflectiveOperationException e) {
+            throw new ExceptionInInitializerError(e);
+        }
+    }
+
+    boolean compareAndSet(long expected, long next) {
+        return COUNT.compareAndSet(this, expected, next);   // was: unsafe.compareAndSwapLong(...)
+    }
+}
+```
+
+### Using FFM from Scala
+
+The API is plain Java, so it works from Scala as-is:
 
 ```scala
 import java.lang.foreign.*
 import java.lang.invoke.MethodHandle
+import scala.util.Using
 
 val linker = Linker.nativeLinker()
-val lookup = linker.defaultLookup()
+val stdlib = linker.defaultLookup()
 
-val abs: MethodHandle = linker.downcallHandle(
-  lookup.find("abs").orElseThrow(),
-  FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.JAVA_INT)
+val strlen: MethodHandle = linker.downcallHandle(
+  stdlib.find("strlen").orElseThrow(),
+  FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
 )
 
-val result = abs.invoke(-42).asInstanceOf[Int]
-println(result)  // 42
+Using.resource(Arena.ofConfined()) { arena =>
+  val cString = arena.allocateFrom("Hello from Scala")
+  val length = strlen.invoke(cString).asInstanceOf[Long]
+  println(length)  // 16
+}
 ```
 
-### jextract: Auto-Generate Bindings
+> [!TIP]
+> Here `invoke` (rather than `invokeExact`) is the forgiving choice: it adapts argument and return types, which saves you from having to match the exact Java static types from Scala. For hot paths, bind the handle once in a `val` (as here) and reuse it; creating the downcall handle is the expensive part.
 
-**jextract** is a tool that reads C header files and generates Java code for Panama:
+### jextract: Generate the Bindings
+
+Writing `FunctionDescriptor`s by hand gets tedious for big libraries. **jextract** (a separate tool from the OpenJDK project, not bundled with the JDK) reads C header files and generates Java source code on top of the FFM API:
 
 ```bash
-jextract --source -t com.example.bindings /usr/include/math.h
+jextract --include-dir /path/to/mylib/include \
+         --output src/main/java \
+         --target-package org.example.mylib \
+         --library mylib \
+         /path/to/mylib/include/mylib.h
 ```
 
-This generates Java classes with method handles for every function in `math.h`. No manual binding code needed.
+You get Java classes with a static method per C function, plus accessors for structs:
+
+```java
+try (Arena arena = Arena.ofConfined()) {
+    MemorySegment point = Point.allocate(arena);
+    Point.x(point, 10);
+    Point.y(point, 5);
+    // pass `point` to a generated function wrapper…
+}
+```
+
+The generated code is ordinary Java, so it can be compiled together with a Scala project.
+
+## The Vector API: SIMD from Java <span class="preview">Incubator</span>
+
+Panama's other half is the **Vector API** (`jdk.incubator.vector`), which expresses computations that the JIT compiles to SIMD instructions (SSE/AVX on x86, NEON/SVE on ARM), with a portable fallback:
+
+```java
+import jdk.incubator.vector.*;
+
+static final VectorSpecies<Float> SPECIES = FloatVector.SPECIES_PREFERRED;
+
+static void multiply(float[] a, float[] b, float[] c) {
+    int i = 0;
+    for (; i < SPECIES.loopBound(a.length); i += SPECIES.length()) {
+        var va = FloatVector.fromArray(SPECIES, a, i);
+        var vb = FloatVector.fromArray(SPECIES, b, i);
+        va.mul(vb).intoArray(c, i);
+    }
+    for (; i < a.length; i++) {       // scalar tail
+        c[i] = a[i] * b[i];
+    }
+}
+```
+
+It is in its **12th incubator round in JDK 27** (JEP 537). The API itself is mature, but it will stay incubating until Project Valhalla's value classes land, so that vectors can become proper value objects. Using it requires `--add-modules jdk.incubator.vector`.
 
 ## Scala Native: The Alternative Path
 
-For Scala specifically, there's another option: **Scala Native**. It compiles Scala directly to native code via LLVM — no JVM at all:
+For Scala specifically, there's another option: **Scala Native**. It compiles Scala directly to native code via LLVM, with no JVM at all:
 
 ```scala
-// Scala Native — direct C interop
-import scalanative.unsafe.*
-import scalanative.libc.stdlib
+// Scala Native: direct C interop
+import scala.scalanative.unsafe.*
 
 @extern
 object mylib:
@@ -216,22 +357,24 @@ object mylib:
 ```
 
 Scala Native has different trade-offs:
-- **No JVM at all**: Instant startup, small binary
-- **No JIT**: Throughput depends on LLVM optimization
-- **Direct C interop**: First-class, no bridges
-- **Limited ecosystem**: Not all Scala libraries work (no Java libraries)
+- **No JVM at all**: instant startup, small binary
+- **No JIT**: throughput depends on ahead-of-time LLVM optimization
+- **Direct C interop**: first-class, no bridges, no native-access flags
+- **Smaller ecosystem**: only Scala libraries published for Scala Native work; Java libraries don't
 
-For JVM Scala projects that need C interop, Panama is the way forward. Scala Native is for when you don't want the JVM at all.
+For JVM Scala projects that need C interop, the FFM API is the way forward. Scala Native is for when you don't want the JVM at all.
+
+<div class="takeaways">
 
 ## Key Takeaways
 
-- **JNI** works but is painful: boilerplate, unsafe, slow boundary crossing
-- **Project Panama** (Java 22+) replaces JNI with safe, fast, pure-Java native interop
-- Panama uses **Memory Segments** (safe pointers) and **Arenas** (lifecycle management)
-- Panama calls are **5-10x faster** than JNI calls
-- **jextract** auto-generates Java bindings from C header files
-- **Scala Native** is an alternative that compiles Scala directly to native code (no JVM)
+- **JNI** works but is painful: C glue code, crashes, and a boundary the JIT can't optimize across
+- The **FFM API** (final in Java 22) calls C from pure Java: `Linker` + `SymbolLookup` + `FunctionDescriptor` → a `MethodHandle`
+- **Memory segments** are bounds- and lifetime-checked views of memory; **arenas** free native memory deterministically
+- Since Java 24, native access (JNI *and* FFM) warns unless you pass `--enable-native-access=ALL-UNNAMED` (or a module list); it will become an error
+- `sun.misc.Unsafe` memory access is on its way out: use `VarHandle` and `MemorySegment`
+- **jextract** generates FFM bindings from C headers
+- The **Vector API** is still incubating (12th round in JDK 27), waiting for Valhalla
+- **Scala Native** compiles Scala to native code without a JVM
 
----
-
-[← Previous: Module System](23-module-system.md) · [Next: Language Ecosystem →](25-language-ecosystem.md)
+</div>
