@@ -1,12 +1,10 @@
 # Part VII — The JVM Ecosystem & Beyond
 
-The JVM is more than a runtime — it's a platform with a rich ecosystem of languages, tools, and evolving capabilities. This final part covers the module system, native interop, the language landscape, and what's coming next.
+The JVM is more than a runtime: it's a platform with a rich ecosystem of languages, tools, and evolving capabilities. This final part covers the module system and the "integrity by default" push, native interop, the language landscape, and where the big OpenJDK projects stand as of JDK 27 (September 2026).
 
-| Chapter                                                     | Topic                                                |
-| ----------------------------------------------------------- | ---------------------------------------------------- |
-| [23. The Module System (JPMS)](23-module-system.md)         | Strong encapsulation and what it means for Scala     |
-| [24. JNI, Panama, and Native Interop](24-native-interop.md) | Calling C from the JVM — the old way and the new way |
-| [25. The JVM Language Ecosystem](25-language-ecosystem.md)  | How Scala, Kotlin, Clojure, and others coexist       |
-| [26. What's Next for the JVM](26-whats-next.md)             | Valhalla, Leyden, Lilliput — the roadmap             |
-
-[← Back to main index](../index.md) · [← Part VI](../part-6-performance/index.md)
+| Chapter                                                                          | Topic                                                                  |
+| -------------------------------------------------------------------------------- | ---------------------------------------------------------------------- |
+| [23. The Module System (JPMS) and Integrity by Default](23-module-system.md)     | Strong encapsulation, `--add-opens`, native access, and final fields   |
+| [24. JNI, Panama, and Native Interop](24-native-interop.md)                      | Calling C from the JVM: JNI, the FFM API, and the Vector API           |
+| [25. The JVM Language Ecosystem](25-language-ecosystem.md)                       | How Scala, Kotlin, Clojure, and others coexist and benefit             |
+| [26. What's Next for the JVM](26-whats-next.md)                                  | Valhalla, Leyden, Lilliput, Loom, Babylon: status and roadmap          |
